--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,14 +5,17 @@
 # Required
 version: 2
 
+build:
+  os: "ubuntu-22.04"
+  tools:
+    python: "3.8"
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/source/conf.py
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-   version: "3.7"
-   install:
-      - requirements: docs/requirements.txt
-      - method: pip
-        path: .
+  install:
+    - method: pip
+      path: .
