--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -8,12 +8,12 @@ version: 2
 build:
   os: "ubuntu-22.04"
   tools:
-    python: "3.11"
+    python: "3.8"
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
    configuration: docs/source/conf.py
 
-#python:
-#  install:
-#    - requirements: docs/requirements.txt
+python:
+  install:
+    - requirements: docs/requirements.txt
